<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/game_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/start_text"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="@string/playButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_name" />

        <ScrollView
            android:layout_width="426dp"
            android:layout_height="438dp"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@+id/play_button"
            tools:layout_editor_absoluteX="-15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rule_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rule_text"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/howtoplay_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/howtoplay" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>